# auris

./: Cargo.toml  README.md
auris-api/: Cargo.toml
auris-api/src/: lib.rs
auris-bin/: Cargo.toml
auris-bin/src/: main.rs
auris-config/: Cargo.toml
auris-config/src/: lib.rs
auris-core/: Cargo.toml
auris-core/src/: scanner.rs  sync.rs  sync_subscriber.rs
auris-db/: Cargo.toml
auris-db/src/: lib.rs
auris-exec/: Cargo.toml
auris-exec/src/: executor.rs  flashbots.rs  tx_builder.rs
auris-gas/: Cargo.toml
auris-gas/src/: lib.rs
auris-sim/: Cargo.toml
auris-sim/src/: backtest.rs  lib.rs
auris-types/: Cargo.toml
contracts/: AurisArb.sol
contracts/test/: AurisArb.t.sol
web-ui/: app.js  dashboard.html  index.html  login.html  style.css
