[package]
name = "auris-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
auris-types = { path = "../auris-types" }

[dev-dependencies]
auris-sim = { path = "../auris-sim" }
