[package]
name = "auris-exec"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
auris-config = { path = "../auris-config" }
auris-db = { path = "../auris-db" }
auris-types = { path = "../auris-types" }
